Mejor lectura del código y filtro al usar pack

--- a/my_admin/templates/admin/base.html
+++ b/my_admin/templates/admin/base.html
@@ -88,7 +88,7 @@
                       <a class="dropdown-item" href="{% url 'admin:cabina_sesion_changelist' %}">Ver Sesiones</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="{% url 'admin:cabina_pack_add' %}">Agregar Pack</a>
-                      <a class="dropdown-item" href="{% url 'admin:cabina_sesion_changelist' %}?es_pack=si&firmada=no">Usar sesión pack</a>
+                      <a class="dropdown-item" href="{% url 'admin:cabina_sesion_changelist' %}?es_pack=si&firmada=no&proxima=si">Usar sesión pack</a>
                       <div class="dropdown-divider"></div>
                       <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
                     </div>
