--- a/my_admin/templates/admin/base_site.html
+++ b/my_admin/templates/admin/base_site.html
@@ -2,7 +2,9 @@
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
-{% block extrahead %}{% endblock %}
+{% block extrahead %}
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+{% endblock %}
 
 {% block branding %}
 <!--
